--- a/index.html
+++ b/index.html
@@ -26,3 +26,24 @@
     <script src="script.js"></script>
 </body>
 </html>
+<h3>各日付ごとの出勤希望</h3>
+<p>各日に対して出勤希望を選択してください（「◯」出勤、「☓」不出勤、「有給」）。</p>
+<ul>
+  <li>
+    <label for="2024-08-01">2024-08-01:</label>
+    <select name="2024-08-01" id="2024-08-01">
+      <option value="出勤">◯ 出勤</option>
+      <option value="不出勤">☓ 不出勤</option>
+      <option value="有給">有給</option>
+    </select>
+  </li>
+  <li>
+    <label for="2024-08-02">2024-08-02:</label>
+    <select name="2024-08-02" id="2024-08-02">
+      <option value="出勤">◯ 出勤</option>
+      <option value="不出勤">☓ 不出勤</option>
+      <option value="有給">有給</option>
+    </select>
+  </li>
+  <!-- 同様に他の日付に対しても追加 -->
+</ul>
